# ALLFED-MinCostFlow-Fertilizer

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
data/: README.md
docs/: README.md  methodology.md
results/: README.md
scripts/: README.md  real_data.ipynb  toy_example.ipynb
src/: README.md  __init__.py  model.py  postprocessing.py  preprocessing.py  utils.py
tests/: README.md  test_mcf.py
